<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_schedule"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs65.punchphone.ScheduleActivity"
    android:orientation="vertical">


    <TableRow>
        <TextView
            android:text="@string/monday"/>

        <TextView
            android:layout_weight="1"
            android:id="@+id/monday_hours"
            android:padding="20dp"/>

        <Button
            android:text="@string/change_hours"
            android:gravity="end"
            android:onClick="mondayChange"
            android:id="@+id/monday_change"/>
    </TableRow>


    <TableRow>
        <TextView
            android:text="@string/tuesday"/>
        <TextView
            android:layout_weight="1"
            android:id="@+id/tuesday_hours"
            android:padding="20dp"/>
        <Button
            android:text="@string/change_hours"
            android:gravity="end"
            android:onClick="tuesdayChange"
            android:id="@+id/tuesday_change"/>
    </TableRow>


    <TableRow>
        <TextView
            android:text="@string/wednesday"/>
        <TextView
            android:layout_weight="1"
            android:id="@+id/wednesday_hours"
            android:padding="20dp"/>
        <Button
            android:text="@string/change_hours"
            android:gravity="end"
            android:onClick="wednesdayChange"
            android:id="@+id/wednesday_change"/>
    </TableRow>


    <TableRow>
        <TextView
            android:text="@string/thursday"/>
        <TextView
            android:layout_weight="1"
            android:id="@+id/thursday_hours"
            android:padding="20dp"/>
        <Button
            android:text="@string/change_hours"
            android:gravity="end"
            android:onClick="thursdayChange"
            android:id="@+id/thursday_change"/>
    </TableRow>


    <TableRow>
        <TextView
            android:text="@string/friday"/>
        <TextView
            android:layout_weight="1"
            android:id="@+id/friday_hours"
            android:padding="20dp"/>
        <Button
            android:text="@string/change_hours"
            android:gravity="end"
            android:onClick="fridayChange"
            android:id="@+id/friday_change"/>
    </TableRow>


    <TableRow>
        <TextView
            android:text="@string/saturday"/>
        <TextView
            android:layout_weight="1"
            android:id="@+id/saturday_hours"
            android:padding="20dp"/>
        <Button
            android:text="@string/change_hours"
            android:gravity="end"
            android:onClick="saturdayChange"
            android:id="@+id/saturday_change"/>
    </TableRow>

    <TableRow>

        <TextView
            android:text="@string/sunday"/>
        <TextView
            android:layout_weight="1"
            android:id="@+id/sunday_hours"
            android:padding="20dp"/>
        <Button
            android:text="@string/change_hours"
            android:gravity="end"
            android:onClick="sundayChange"
            android:id="@+id/sunday_change"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/total"/>

        <TextView
            android:layout_weight="1"
            android:id="@+id/total_hours"
            android:padding="20dp"/>

    </TableRow>


</TableLayout>
