<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!--<android.support.v7.widget.Toolbar-->
    <!--android:id="@+id/my_toolbar"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="?attr/actionBarSize"-->
    <!--android:background="?attr/colorPrimary"-->
    <!--android:elevation="4dp"-->
    <!--android:title="@string/app_name"-->
    <!--android:titleTextColor="@color/white"-->
    <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar">-->
    <!--</android.support.v7.widget.Toolbar>-->


    <!--&lt;!&ndash;android:layout_below="@+id/my_toolbar"&ndash;&gt;-->
    <!--<android.support.v4.widget.DrawerLayout-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:id="@+id/drawer_layout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->
    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/date_header"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/DateText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:layout_below="@id/DateText"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:id="@+id/dateEditText" />

            <TextView
                android:text="@string/time_header"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_below="@+id/dateEditText"
                android:id="@+id/timeText" />

            <TextClock
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_below="@id/timeText"
                android:format12Hour="hh:mm:ss a zzz"
                android:textSize="20sp"
                android:id="@+id/timeClock" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/you_are_currently"
                android:layout_marginTop="80dp"
                android:layout_below="@+id/timeClock"
                android:layout_centerHorizontal="true"
                android:id="@+id/status_header"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:id="@+id/statusField"
                android:text="@string/punched_out"
                android:textColor="@color/red"
                android:layout_below="@id/status_header"
                android:layout_margin="10dp"
                android:layout_centerHorizontal="true" />

            <Button
                android:text="@string/punch_in"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="70dp"
                android:id="@+id/punchIn"
                android:layout_below="@id/statusField"
                android:layout_centerHorizontal="true"
                android:onClick="handlePunchIn"/>
            <Button
                android:text="@string/punch_out"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:id="@+id/punchOut"
                android:onClick="handlePunchOut"
                android:layout_alignTop="@+id/punchIn"
                android:layout_alignParentStart="true"
                android:layout_marginTop="59dp"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/punchOut"
                android:id="@+id/spinner">
            </Spinner>
        </RelativeLayout>
    </FrameLayout>

    <!--&lt;!&ndash; The navigation drawer &ndash;&gt;-->
    <!--<android.support.design.widget.NavigationView-->
    <!--android:id="@+id/mainNavView"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@color/sidebarBackground"-->
    <!--android:layout_gravity="start"-->
    <!--app:headerLayout="@layout/headernav"-->
    <!--app:menu="@menu/drawer"/>-->
    <!--</android.support.v4.widget.DrawerLayout>-->




</RelativeLayout>